# niimbot-label-designer

./: .gitignore  CLAUDE.md  LICENSE  README.md  compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-and-push.yml
.omc/niimbot/: state.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  terminal.py
backend/app/mqtt/: client.py
backend/app/printer/: manager.py  protocol.py  serial_client.py
backend/app/routers/: history.py  printer.py  projects.py  queue.py  templates.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/designer/: AlignPanel.tsx  BitmapPreview.tsx  DocAlignPanel.tsx  ElementToolbar.tsx  HtmlEditor.tsx  IconModal.tsx  LabelCanvas.tsx  LabelSettings.tsx  LayerPanel.tsx  PrintBatchTable.tsx  PropertiesPanel.tsx  ToolSidebar.tsx  VariableList.tsx
frontend/src/components/history/: PrintHistory.tsx
frontend/src/components/printer/: PrintDialog.tsx  PrinterPanel.tsx
frontend/src/components/projects/: ProjectList.tsx  (+3 more)
frontend/src/data/: icon-list.ts
frontend/src/lib/: api.ts  bitmap-utils.ts  canvas-utils.ts  db.ts  defaults.ts  fabric-utils.ts  html-renderer.ts  label-renderer.ts  printer-client.ts  sse-client.ts  ws-client.ts
frontend/src/types/: label.ts  project.ts
nginx/: default.conf
src/: main.ts  printer.ts  style.css  templates.ts
(+4 files in other folders)
